WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131657
ViewportConfiguration handles userZoom incorrectly
https://bugs.webkit.org/show_bug.cgi?id=131657
Summary
ViewportConfiguration handles userZoom incorrectly
Benjamin Poulain
Reported
2014-04-14 18:36:43 PDT
ViewportConfiguration handles userZoom incorrectly
Attachments
Patch
(1.91 KB, patch)
2014-04-14 18:37 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2
(545.42 KB, application/zip)
2014-04-15 00:25 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-14 18:37:57 PDT
Created
attachment 229334
[details]
Patch
Build Bot
Comment 2
2014-04-15 00:25:53 PDT
Comment on
attachment 229334
[details]
Patch
Attachment 229334
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5810235482570752
New failing tests: http/tests/navigation/ping-cross-origin.html http/tests/security/dataTransfer-set-data-file-url.html http/tests/navigation/javascriptlink-basic.html http/tests/navigation/redirect-preserves-referrer.html http/tests/navigation/ping-cookie.html http/tests/security/isolatedWorld/userGestureEvents.html http/tests/security/referrer-policy-redirect-link.html http/tests/navigation/document-location-click.html http/tests/security/cookies/third-party-cookie-blocking-user-action.html http/tests/navigation/no-referrer-subframe.html http/tests/navigation/no-referrer-same-window.html http/tests/navigation/ping-same-origin.html http/tests/navigation/javascriptlink-frames.html http/tests/security/referrer-policy-rel-noreferrer.html http/tests/navigation/javascriptlink-goback.html http/tests/navigation/ping-cross-origin-from-https.html http/tests/navigation/redirect-to-random-url-versus-memory-cache.html http/tests/navigation/no-referrer-target-blank.html http/tests/navigation/no-referrer-reset.html http/tests/loading/unfinished-main-resource-back-to-cached-page-callbacks.html http/tests/navigation/document-location-click-timeout.html http/tests/navigation/document-location-mouseover.html http/tests/security/isolatedWorld/events.html http/tests/misc/isindex-with-no-form.html
Build Bot
Comment 3
2014-04-15 00:25:56 PDT
Created
attachment 229358
[details]
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Benjamin Poulain
Comment 4
2014-04-15 11:42:36 PDT
Comment on
attachment 229334
[details]
Patch Clearing flags on attachment: 229334 Committed
r167318
: <
http://trac.webkit.org/changeset/167318
>
Benjamin Poulain
Comment 5
2014-04-15 11:42:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug