ViewportConfiguration handles userZoom incorrectly https://bugs.webkit.org/show_bug.cgi?id=131657

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-04-15
Reviewed by Darin Adler.

* page/ViewportConfiguration.cpp:
(WebCore::viewportArgumentUserZoomIsSet):
(WebCore::ViewportConfiguration::updateConfiguration):
The other viewport values must be strictly positive, userZoom is always either zero, one or minus one.
As a result, the value zero was never set.


Canonical link: https://commits.webkit.org/149756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167318 268f45cc-cd09-0410-ab3c-d52691b4dbfc